--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,27 @@ __pycache__/
 
 # 忽略環境變數（API 金鑰）
 .env
+.env.local
+.env.production
 
 # 忽略 VSCode 設定（如果有在用 VSCode）
 .vscode/
 
 # 忽略前端相依套件（如果是 React/Vue）
 node_modules/
+
+# 忽略日誌文件
+*.log
+logs/
+
+# 忽略 IDE 設定
+.idea/
+*.swp
+*.swo
+
+# 忽略 OS 檔案
+.DS_Store
+Thumbs.db
+
+# 忽略部署相關文件
+.env.backup
