--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-aiohttp==3.11.18
-protobuf==6.31.0
-python-dotenv==1.1.0
-quart==0.20.0
-quart_cors==0.8.0
-Requests==2.32.3
-google-generativeai
+aiohttp>=3.9.0
+protobuf>=4.24.0
+python-dotenv>=1.0.0
+quart>=0.19.0
+quart-cors>=0.7.0
+requests>=2.31.0
+google-generativeai>=0.3.0
