--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "cd react-app && npm install && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "react-app/dist",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/api/:path*",
