--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
   "outputDirectory": "react-app/dist",
   "installCommand": "npm install",
   "rewrites": [
