--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "install": "cd react-app && npm install",
     "build": "cd react-app && npm run build",
     "dev": "cd react-app && npm run dev"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1"
   }
 }
