--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "outputDirectory": "react-app/dist",
-  "installCommand": "npm install",
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node",
+      "excludeFiles": ["**/*.py", "**/__pycache__/**"]
+    }
+  },
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
   ]
 }
+
