fix: Correct vercel.json excludeFiles syntax

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "functions": {
     "api/**/*.js": {
       "runtime": "@vercel/node",
-      "excludeFiles": ["**/*.py", "**/__pycache__/**"]
+      "excludeFiles": "**/*.py"
     }
   },
   "rewrites": [
