--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node",
-      "excludeFiles": "**/*.py"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api"
-    }
-  ]
-}
+    "rewrites": [
+      {
+        "source": "/api/:path*",
+        "destination": "/api/ask"
+      }
+    ]
+  }
 
