✨ 完成 RAG 向量資料庫系統與地圖視覺化功能

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai-travel-planner",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "install": "cd react-app && npm install",
@@ -8,6 +9,10 @@
     "dev": "cd react-app && npm run dev"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1"
+    "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.75.0",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.3",
+    "openai": "^6.3.0"
   }
 }
