專案清理與 ROADMAP 更新
 刪除文件：
- test-transport-mode.js（測試已完成）
- dev-server.js（改用 Vercel Dev）
- react-app/.env（多餘，統一使用根目錄 .env）

 更新文件：
- ROADMAP.md: 標記 RAG 系統為已完成
- .env.example: 添加 Supabase 配置說明
- .gitignore: 防止提交 react-app/.env

 新增文件：
- PROJECT_CLEANUP.md: 專案清理記錄

 優化成果：
- 環境變數統一管理
- 專案結構更清晰
- 文檔完整且最新
- F-01 RAG 系統標記為完成

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,11 @@ GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # 申請網址: https://opendata.cwa.gov.tw/index
 CWA_API_KEY=your_cwa_api_key_here
 
-# OpenWeatherMap API Key (備用，目前未使用)
-OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
+# Supabase 設定 (用於 RAG 向量資料庫)
+# 申請網址: https://supabase.com
+# 從 Project Settings -> API 取得
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key_here
+
+# 使用 Gemini 的 Embedding API（不需要 OpenAI API Key）
+# Gemini text-embedding-004 模型：768 維度、免費額度更高
