--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# ====================================
+# 後端 API Keys
+# ====================================
+
 # Gemini API Key (用於 AI 行程規劃)
 # 申請網址: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
