--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@vis.gl/react-google-maps": "^1.5.5",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
