配置使用者認證環境變數
## 更新內容

### 環境變數配置
-  新增 VITE_SUPABASE_URL（前端用）
-  新增 VITE_SUPABASE_ANON_KEY（前端認證用）
-  更新 .env.example 範本
-  同步更新 .env 檔案（已加入 Anon Key）

### 檔案清理
-  刪除 react-app/.env.example（統一使用根目錄）
-  環境變數統一管理在根目錄 .env

### Supabase 客戶端
-  建立 react-app/src/supabaseClient.js
-  使用 Vite 環境變數前綴

### 套件安裝
-  @supabase/supabase-js
-  @supabase/auth-ui-react
-  @supabase/auth-ui-shared

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,15 @@ GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 # 申請網址: https://opendata.cwa.gov.tw/index
 CWA_API_KEY=your_cwa_api_key_here
 
-# Supabase 設定 (用於 RAG 向量資料庫)
+# Supabase 設定 (用於 RAG 向量資料庫與使用者認證)
 # 申請網址: https://supabase.com
 # 從 Project Settings -> API 取得
 SUPABASE_URL=your_supabase_project_url_here
 SUPABASE_SERVICE_KEY=your_supabase_service_role_key_here
+
+# 前端 Supabase 設定 (使用 VITE_ 前綴)
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # 使用 Gemini 的 Embedding API（不需要 OpenAI API Key）
 # Gemini text-embedding-004 模型：768 維度、免費額度更高
