--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.75.0",
+    "axios": "^1.12.2",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "openai": "^6.3.0"
