--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,10 +14,13 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.75.0",
     "@vis.gl/react-google-maps": "^1.5.5",
+    "autoprefixer": "^10.4.21",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
     "vite": "^7.1.7"
   }
 }
