--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "/api/ask"
-      }
-    ]
-  }
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/react-app/index.html"
+    }
+  ]
+}
 
