--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/react-app/index.html"
+      "destination": "/index.html"
     }
   ]
 }
