--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.75.0",
     "@vis.gl/react-google-maps": "^1.5.5",
     "autoprefixer": "^10.4.21",
+    "d3-geo": "^3.1.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
